Update README.md
Added VM Arguments to ReadMe for personal reference.